# lattice-db

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: errors.rs  graph.rs  lattice_db.rs  lib.rs  query.rs  utils.rs
src/graph/: graph_builder.rs  graph_prepared.rs
src/lattice_db/: db.rs  reader.rs  tables.rs  writer.rs
src/props/: properties.rs
src/query/: query_builder.rs  query_prepared.rs  query_save.rs
src/utils/: generational_vector.rs  values.rs
